--- a/custom_components/epcube/manifest.json
+++ b/custom_components/epcube/manifest.json
@@ -4,10 +4,10 @@
   "codeowners": ["@Bobsilvio"],
   "config_flow": true,
   "dependencies": [],
-  "documentation": "https://github.com/Bobsilvio/epcube-homeassistant/",
+  "documentation": "https://github.com/Bobsilvio/epcube/",
   "iot_class": "cloud_polling",
-  "issue_tracker": "https://github.com/Bobsilvio/epcube-homeassistant/issues",
+  "issue_tracker": "https://github.com/Bobsilvio/epcube/issues",
   "loggers": ["epcube"],
   "requirements": [],
-  "version": "1.0.2"
+  "version": "1.0.3"
 }
