--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "epcube",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Home Assistant custom integration for EPCUBE Energy solar monitoring",
   "keywords": [
     "home-assistant",
@@ -11,7 +11,7 @@
   ],
   "main": "sensor.py",
   "repository": "git@github.com:bobsilvio/epcube-homeassistant.git",
-  "author": "Silvio Vaira <silvio.vaira@gmail.com>",
+  "author": "Bobsilvio <@gmail.com>",
   "license": "MIT",
   "dependencies": {}
 }
